--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SD130-A2",
+  "name": "sd130-a2",
   "version": "1.0.0",
   "description": "1. Clone this repository to a local directory. 2. Create a new branch, called \"name-adding-feature,\" and checkout that branch. 3. Add to the main.js script a method that adds your name (feel free to hard-code your name into the script) to the unordered list element on the page. Commit this change when you are satisfied that it works.",
   "main": "gulpfile.js",
@@ -7,10 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Johnny",
   "license": "ISC",
   "devDependencies": {
     "del": "^6.0.0",
-    "gulp": "^4.0.2"
-  }
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joaofelipe0202/sd130-assignment-2-repo-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/joaofelipe0202/sd130-assignment-2-repo-2/issues"
+  },
+  "homepage": "https://github.com/joaofelipe0202/sd130-assignment-2-repo-2#readme"
 }
