--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "del": "^6.0.0",
-    "gulp": "^4.0.2"
-  }
+    "gulp": "^4.0.2",
+    "gulp-terser": "^2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cmacmitt/sd130-assignment-2-repo-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cmacmitt/sd130-assignment-2-repo-2/issues"
+  },
+  "homepage": "https://github.com/cmacmitt/sd130-assignment-2-repo-2#readme"
 }
